--- a/trunk/web/relaciones-empresariales.xhtml
+++ b/trunk/web/relaciones-empresariales.xhtml
@@ -15,7 +15,7 @@
         <ui:composition template="./WEB-INF/facelets/templates/plantillalogueado.xhtml">
 
             <ui:define name="title">
-                Relaciones empresariale - CreativeMeetings
+                Relaciones empresariales - CreativeMeetings
             </ui:define>
 
             <ui:define name="logoempresa">
