--- a/web/viewcalendar.xhtml
+++ b/web/viewcalendar.xhtml
@@ -3,17 +3,19 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:ice="http://www.icesoft.com/icefaces/component"
-      xmlns:ace="http://www.icefaces.org/icefaces/components"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <body>
         <ui:composition template="./WEB-INF/facelets/templates/plantillalogueado.xhtml">
 
-
-            <ui:define name="title">
-                Calendario - CreativeMeetings
+            <ui:define name="sesion">
+                <c:if test="#{privilegiosBean.compruebaPrivilegiosSesion()==0 or privilegiosBean.compruebaPrivilegiosSesion()==1 or privilegiosBean.compruebaPrivilegiosSesion()==2  }">
+                    #{usuario.creaCalendarioUsuarioBean()}
+                </c:if>
             </ui:define>
+            
+            <ui:define name="title">Calendario - CreativeMeetings</ui:define>
 
             <ui:define name="logoempresa">
                 logoempresa
@@ -29,16 +31,13 @@
 
             <ui:define name="content">
 
-                <ice:panelGroup rendered="#{privilegiosBean.compruebaPrivilegiosSesion()==0 or privilegiosBean.compruebaPrivilegiosSesion()==1 or privilegiosBean.compruebaPrivilegiosSesion()==2  }">
-                    #{usuario.creaCalendarioUsuarioBean()}
-                </ice:panelGroup>
                 <ice:form id="formulariocalendario">
 
                     <div id="calendario">
                         <ice:selectOneMenu value="#{calendarioUsuarioBean.anio}" >
                             <f:selectItems value="#{calendarioUsuarioBean.listaanios}" ></f:selectItems>
                         </ice:selectOneMenu> 
-                        <ice:commandButton action="#{calendarioUsuarioBean.irAnio}" value="Cambiar a&ntilde;o"></ice:commandButton>
+                        <ice:commandButton styleClass="btn" action="#{calendarioUsuarioBean.irAnio}" value="Cambiar a&ntilde;o"></ice:commandButton>
                         <ice:selectInputDate  styleClass="calendarioReuniones" partialSubmit="false"
                                               renderMonthAsDropdown="true" renderYearAsDropdown="false" 
                                               highlightClass="antonio: juan: juan" highlightUnit="DAY_OF_WEEK: MONTH: DAY_OF_YEAR" 
@@ -49,7 +48,7 @@
                         </ice:selectInputDate>
                     </div>
 
-                    <ice:commandButton value="Información Reunión" action="#{calendarioUsuarioBean.informacionReunion}"/>
+                    <ice:commandButton styleClass="btn btn-info" value="Información Reunión" action="#{calendarioUsuarioBean.informacionReunion}"/>
                     <ice:panelGroup rendered="#{calendarioUsuarioBean.verinformacion==true}">
                         <ice:panelGroup>
                             <table>
